updated : send email to confirm account